# orbit-wars

./: .gitignore  CLAUDE.md  README.md  arena.py  backlog.md  build_rl_submission.py  glossary.md  hello.py  jax_port.md  learn.md  main.py  plan.md  ppo_strategy.py  progress.md  pyproject.toml  rl_submission_main.py  run_remote_train.sh  train_ppo_strategy.py
agents/: v4_rudra.py
data/: pi_theta_w.npz  ppo_smoke.npz  ppo_w.npz
ow_sim/: Cargo.toml  bench_envpool.py  observe_parity.py  parity_full.py  pyproject.toml  test_parity.py
ow_sim/src/: lib.rs
references/: score-1-000-orbit-wars-structured-baseline.ipynb
src/: arena_raw.py  arena_vs_v4.py  arena_vs_v4_cnn.py  audit_counterfactual.py  bench_env.py  ensemble_agent.py  ensemble_v2.py  fast_sim.py  jax_cnn_policy.py  jax_encode.py  jax_env.py  jax_policy.py  jax_raster.py  jax_rollout.py  jax_train.py  jax_train_cnn.py  pi_theta_infer.py  policy_dataset.py  policy_encode.py  policy_train.py  ppo_train.py  replay_parser.py  test_jax_encode.py  test_jax_parity.py  test_jax_policy.py  v4_instance.py  verify_sim.py
submit/: build.py  build_pitheta.py  build_pitheta_cand.py  build_ppo_naked.py  daily.sh  main.py  main_fixed.py  main_pitheta.py  main_pitheta_cand.py  main_ppo_15m.py  main_ppo_cand.py
