[package]
name = "ow_sim"
version = "0.1.0"
edition = "2021"

[lib]
name = "ow_sim"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py310"] }
rayon = "1"
numpy = "0.22"
ndarray = "0.16"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
